tests/pass/array_2.crdm
fn main() {
    let arr2: [[int]] = [[1, 2, 3], [4, 5, 6], [7, 8, 9]];
}