tests/fail/closure_5.crdm
fn main() {
    let increment: fn(&string) -> void = |x| void -> { x += 1; };

    let closure_ret_closure: fn() -> fn(&int) -> void = || fn(&int) -> void -> { return increment; };

    closure_ret_closure()(1);
}